[gd_scene load_steps=3 format=3 uid="uid://cm64o6vt7675l"]

[ext_resource type="Script" uid="uid://d1yb083g3hfgy" path="res://scripts/patient.gd" id="1_bsxj1"]
[ext_resource type="Texture2D" uid="uid://c8qbqcgtpplg7" path="res://assets/richFulcrum.png" id="2_vb615"]

[node name="Patient" type="Node2D"]
script = ExtResource("1_bsxj1")

[node name="patient1" type="Sprite2D" parent="."]
position = Vector2(379, 215)
scale = Vector2(1, 2)
texture = ExtResource("2_vb615")

[node name="activeDialogue" type="Label" parent="patient1"]
visible = false
offset_left = -167.0
offset_top = -55.5
offset_right = 37.0
offset_bottom = 24.5
text = "This is active text"
autowrap_mode = 3

[node name="sanity_bar" type="Sprite2D" parent="patient1"]
modulate = Color(0.043137256, 1, 0.06666667, 1)

[node name="sanity_num" type="Label" parent="patient1"]
anchors_preset = -1
anchor_left = -1.463
anchor_top = 1.2190001
anchor_right = -1.463
anchor_bottom = 1.2190001
offset_left = -21.183998
offset_top = -38.008003
offset_right = 7.816002
offset_bottom = -15.008003

[node name="humour_num" type="Label" parent="patient1"]
anchors_preset = -1
anchor_left = 0.5
anchor_top = 1.1550001
anchor_right = 0.5
anchor_bottom = 1.1550001
offset_left = -39.0
offset_top = -36.960003
offset_bottom = -13.960003

[node name="right_num" type="Label" parent="patient1"]
anchors_preset = -1
anchor_left = 1.0730001
anchor_top = 1.1700001
anchor_right = 1.0730001
anchor_bottom = 1.1700001
offset_left = -7.3360023
offset_top = -37.440002
offset_right = 24.663998
offset_bottom = -14.440002

[node name="patient2" type="Sprite2D" parent="."]

[node name="actionBar" type="Sprite2D" parent="."]
